--- a/tansan.html
+++ b/tansan.html
@@ -18,13 +18,14 @@
       "quickSearch": 1,
       "filterable": 1
     },
-    {"key":"Kuaikan", ,
-    "name":"🎈快看",
-    "type":3,
-    "api":"csp_Kuaikan",
-    "searchable":1,
-    "quickSearch":1,
-    "filterable":1
+    {
+      "key":"Kuaikan",
+      "name":"🎈快看",
+      "type":3,
+      "api":"csp_Kuaikan",
+      "searchable":1,
+      "quickSearch":1,
+      "filterable":1
     },
     {
       "key": "七七",
