--- a/tansan.html
+++ b/tansan.html
@@ -147,7 +147,7 @@
         {
           "name": "redirect",
           "urls": [
-            "proxy://do=live&type=txt&ext=aHR0cHM6Ly95ZHUwMTU5LmdpdGh1Yi5pby9tYW8vbGl2ZS50eHQ="
+            "proxy://do=live&type=txt&ext=aHR0cHM6Ly95ZHUwMTU5LmdpdGh1Yi5pby9tYW8vbGl2ZS50eHQ=,aHR0cHM6Ly95ZHUwMTU5LmdpdGh1Yi5pby9tYW8vbXR2LnR4dA=="
           ]
         }
       ]
