--- a/tansan.html
+++ b/tansan.html
@@ -10,6 +10,16 @@
       "filterable": 1
     },
     {
+      "key":"csp_xpath_kangbazi",
+      "name":"🥒扛把子影院(XP)",
+      "type":3,
+      "api":"csp_XPath",
+      "searchable":1,
+      "quickSearch":1,
+      "filterable":0,
+      "ext":"https://ydu0159.github.io/m/kangbazi.json"
+    },
+    {
       "key": "LiteApple",
       "name": "小苹果",
       "type": 3,
