--- a/tansan.html
+++ b/tansan.html
@@ -17,7 +17,7 @@
       "searchable":1,
       "quickSearch":1,
       "filterable":0,
-      "ext":"https://ydu0159.github.io/m/kangbazi.json"
+      "ext":"https://ydu0159.github.io/xp/kangbazi.json"
     },
     {
       "key": "LiteApple",
