--- a/tansan.html
+++ b/tansan.html
@@ -11,6 +11,16 @@
     },
     {
       "key":"csp_xpath_kangbazi",
+      "name":"🥒789影院(XP)",
+      "type":3,
+      "api":"csp_XPath",
+      "searchable":1,
+      "quickSearch":1,
+      "filterable":0,
+      "ext":"https://ydu0159.github.io/xp/789kp.json"
+    },
+    {
+      "key":"csp_xpath_kangbazi",
       "name":"🥒扛把子影院(XP)",
       "type":3,
       "api":"csp_XPath",
