--- a/tansan.html
+++ b/tansan.html
@@ -10,13 +10,13 @@
       "filterable": 1
     },
     {
-      "key":"csp_xpath_kangbazi",
-      "name":"🥒789影院(XP)",
+      "key":"csp_xpath_789kp",
+      "name":"🥒789看片(XPF)",
       "type":3,
-      "api":"csp_XPath",
+      "api":"csp_XPathMacFilter",
       "searchable":1,
       "quickSearch":1,
-      "filterable":0,
+      "filterable":1,
       "ext":"https://ydu0159.github.io/xp/789kp.json"
     },
     {
