--- a/tansan.html
+++ b/tansan.html
@@ -21,9 +21,9 @@
     },
     {
       "key":"csp_xpath_kangbazi",
-      "name":"🥒扛把子影院(XP)",
+      "name":"🥒扛把子影院(XPF)",
       "type":3,
-      "api":"csp_XPath",
+      "api":"csp_XPathMacFilter",
       "searchable":1,
       "quickSearch":1,
       "filterable":1,
