--- a/tansan.html
+++ b/tansan.html
@@ -539,5 +539,5 @@
     "cdnjs.hnfenxun.com",
     "cms.qdwght.com"
   ],
-  "spider": "https://ydu0159.github.io/mao/bibi.jar"
+  "spider": "https://ydu0159.github.io/mao/bili.jar"
 }
