--- a/tansan.html
+++ b/tansan.html
@@ -86,12 +86,12 @@
     {
       "key": "Bili",
       "name": "B站",
-      "type": 3,
+      "type"
       "api": "csp_Bili",
       "searchable": 1,
       "quickSearch": 1,
       "filterable": 1,
-      "ext": "http://aHR0cHM6Ly95ZHUwMTU5LmdpdGh1Yi5pby9tYW8vYmlsaTIuanNvbg==base64.json"
+      "ext": "http://ydu0159.github.io/mao/bili.json"
     },
     {
       "key": "AliPS",
