--- a/tansan.html
+++ b/tansan.html
@@ -86,7 +86,7 @@
     {
       "key": "Bili",
       "name": "B站",
-      "type"
+      "type":3,
       "api": "csp_Bili",
       "searchable": 1,
       "quickSearch": 1,
