--- a/tansan.html
+++ b/tansan.html
@@ -17,7 +17,7 @@
       "searchable":1,
       "quickSearch":1,
       "filterable":1,
-      "ext":"https://ydu0159.github.io/xp/789kp.json"
+      "ext":"https://ydu0159.github.io/xp/789ba.json"
     },
     {
       "key":"csp_xpath_kangbazi",
