--- a/tansan.html
+++ b/tansan.html
@@ -126,7 +126,7 @@
       "searchable": 1,
       "quickSearch": 1,
       "filterable": 1,
-      "ext": "https://pandora2277.github.io/tester.json"
+      "ext": "https://ydu0159.github.io/mao/bili.json"
     },
     {
       "key": "AliPS",
