--- a/tansan.html
+++ b/tansan.html
@@ -1,6 +1,15 @@
 {
   "sites": [
-       {
+      {
+      "key": "csp_apple",
+      "name": "🍎小苹果(SP)",
+      "type": 3,
+      "api": "csp_LiteApple",
+      "searchable": 1,
+      "quickSearch": 1,
+      "filterable": 1
+     },
+     {
       "key": "小宝影院",
       "name": "小宝影院",
       "type": 3,
