--- a/tansan.html
+++ b/tansan.html
@@ -1,5 +1,14 @@
 {
   "sites": [
+     {
+      "key":"Lib",
+      "name":"Libvio",
+      "type":3,
+      "api":"csp_Lib",
+      "searchable":1,
+      "quickSearch":1,
+      "filterable":1
+      },
       {
       "key": "csp_apple",
       "name": "🍎小苹果(SP)",
